<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.MyReportStudent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rel1">

        <include layout="@layout/app_bar_layout"
            android:id="@+id/main_page_toolbar"/>

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"/>

        <TextView
            android:textColor="@android:color/black"
            android:layout_toRightOf="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_report"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/rel1"
        android:id="@+id/rel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@android:color/black"
            android:id="@+id/text_classreport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Kehadiran"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="20dp"/>

        <TextView
            android:textColor="@android:color/black"
            android:id="@+id/text_kehadiran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-"
            android:textAlignment="center"
            android:textSize="15sp"
            android:layout_below="@+id/text_classreport"
            android:layout_marginBottom="20dp"/>


    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/payment_recycle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rel2"
        android:padding="10dp"
        android:layout_above="@id/confirmation_btn"/>

    <TextView
        android:textColor="@android:color/black"
        android:id="@+id/text_nodata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_tidakadadata"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="18sp" />

    <Button
        android:textColor="@android:color/white"
        android:id="@+id/confirmation_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:text="@string/text_confirm"
        android:textAllCaps="false"
        android:background="@drawable/gradientbackground"/>

</RelativeLayout>