<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserMain">

    <LinearLayout
        android:orientation="vertical"
        android:weightSum="8"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/roundbackground">

            <Spinner
                android:id="@+id/spinner_logout"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_welcome"
                android:textAlignment="center"
                android:layout_centerVertical="true"
                android:textSize="22sp"
                android:textColor="@android:color/white"
                android:layout_above="@id/welcome_name"/>

            <TextView
                android:textStyle="bold"
                android:id="@+id/welcome_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_centerVertical="true"
                android:textSize="22sp"
                android:textColor="@android:color/white"/>



        </RelativeLayout>

        <GridLayout
            android:id="@+id/mainGrid"
            android:columnCount="2"
            android:rowCount="2"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="14dp"
            android:background="@android:color/white">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:layout_margin="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_above="@+id/text_profile"
                        android:src="@drawable/profile"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/myprofile_btn"/>

                    <TextView
                        android:textAlignment="center"
                        android:id="@+id/text_profile"
                        android:text="@string/text_profile"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:layout_margin="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_above="@+id/text_info"
                        android:src="@drawable/info"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/teacher_btn"/>

                    <TextView
                        android:textAlignment="center"
                        android:id="@+id/text_info"
                        android:text="@string/text_info"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                >

                <RelativeLayout
                    android:layout_margin="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_above="@+id/text_report"
                        android:src="@drawable/kelas"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/report_btn"/>

                    <TextView
                        android:textAlignment="center"
                        android:id="@+id/text_report"
                        android:text="@string/text_report"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <!-- Column 2 -->
            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                >

                <RelativeLayout
                    android:layout_margin="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_above="@+id/text_jadwal"
                        android:src="@drawable/jadwal"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/schedule_btn"/>

                    <TextView
                        android:textAlignment="center"
                        android:id="@+id/text_jadwal"
                        android:text="@string/text_jadwal"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </GridLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:background="@android:color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="v.0.8.0"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/black"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>